/*
 * $Id: ChangeLog,v 1.1098 2013-07-09 00:21:18 fyurisich Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2013-07-08 21:21 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_combo.prg
     * When a search does not succeed and there are items not
       already loaded, load a limited number of them instead of
       loading all remaining ones.
     - One comment deleted.
     * Minor formatting.

2013-07-08 20:50 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_combo.prg
     + Added DELAYEDLOAD and INCREMENTAL support to combobox
       control with DISPLAYEDIT clause.
     * One comment changed.
     * Changed hardwired constants by defined constants.

2013-07-04 22:16 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * include/oohg.h
     * Fixed C compiler warnings when HB_* command are
       already defined.

2013-07-04 22:02 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_xbrowse.prg
     * Method AddColumn now returns de new column's number.
     + Added uReplaceField parameter to method AddColumn.
     + Added lRefresh parameter to method AddColumn (defaults
       to .T.). .F. disables automatic refresh.
     + Added method SetColumn to change the attributes of
       a given column.
   * source/h_grid.prg
     + Added method SetColumn to change the attributes of
       a given column.

2013-07-04 20:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_browse.prg
     ! Fixed: wrong behaviour when initial value is set to
       bottom record in a synchronized browse.

2013-07-04 17:43 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * include/oohg.h
     * Changed the definition of HB_* compatibility commands
       for xHarbour.
   * include/i_xbrowse.prg
   * include/i_hmg_compat.prg
   * include/i_browse.prg