@@ -1,11 +1,18 @@
 /*
- * $Id: ChangeLog,v 1.1098 2013-07-09 00:21:18 fyurisich Exp $
+ * $Id: ChangeLog,v 1.1099 2013-07-10 15:42:27 migsoft Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2013-07-10 11:37 UTC-0400 MigSoft <migsoft@oohg.org>
+   * include/oohg.h
+   * include/i_hb_compat.ch
+   * resources/oohg.rc
+   + resources/WindowsXP64.Manifiest
+     + Added support for MinGW64.
 
 2013-07-08 21:21 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
    * source/h_combo.prg
